--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>3.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.6.1</version>
+        </dependency>
+
 
     </dependencies>
 </project>
